[package]
name = "spatial_hash"
version = "0.2.0"
edition = "2021"
description = "A 2D Spatial Hash which uses cubes, triangles and hexes."
repository = "https://github.com/JulianKnodt/regular_spatial_hash"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
ggez = { git = "https://github.com/ggez/ggez", branch = "devel" }
either = "1.8.0"
#surveyor = { git = "https://github.com/JulianKnodt/surveyor" }
surveyor = { path = "/Users/julian/Desktop/programming/tools/surveyor" }

[[bench]]
name = "isect_ck"
harness = false
